src/objects/loan__Day_Process__c.object
<CustomObject>
    <fields>
        <fullName>loan__Accounts_Accrured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounts Accrured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Billing_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Day Processes</relationshipLabel>
        <relationshipName>Day_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Commission_Payment_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commission Payment Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Credit_Bureau_Payment_Profile_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Bureau Payment Profile Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Day_Ended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day Ended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Day_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Day_Status__c</fullName>
        <formula>IF( loan__Day_Started__c, IF( loan__Day_Ended__c ,&apos;Day Ended Successfully&apos;,&apos;Day Started Successfully&apos;) , &apos;Day has not started&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__EOD_Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOD Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__EOD_Process_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOD Process Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__FD_Processing_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FD Processing Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Investor_Payout_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investor Payout Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Accounting_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Accounting Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Collection_Chart_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Collection Chart Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_History_Tracked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan History Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Maturity_Processing_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Maturity Processing Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Loc_Billing_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the billing done for Loc</description>
        <label>Loc Billing Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__SOD_Process_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SOD Process Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Accrual_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Savings Accrual Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Collection_Chart_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Savings Collection Chart Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Day Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Ended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Day Process</label>
    <nameField>
        <displayFormat>DPI-{0000000000}</displayFormat>
        <label>Day Process ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Day Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Check_for_calender_date</fullName>
        <active>true</active>
        <description>Current system date shouldn&apos;t be beyond the current calender date.</description>
        <errorConditionFormula>AND(loan__Day_Started__c ,loan__Date__c  &gt; TODAY())</errorConditionFormula>
        <errorMessage>Current system date shouldn&apos;t be beyond the current calender date.</errorMessage>
    </validationRules>
</CustomObject>